src/snapshots/matchbox__test__other.snap
---
source: src/test.rs
expression: "snapshot! { match () { Deref @ x => () } }"
---
fn main() {
    match () {
        a0 if { #[allow(unused_variables)] if let x = &**a0 { true } else { false } } => {
            if let x = &**a0 {
                ()
            } else {
                panic!(
                    "Two invocations of Deref::deref returned different outputs on same inputs",
                )
            }
        }
    }
}
