src/snapshots/matchbox__test__spelling-2.snap
---
source: src/test.rs
expression: "snapshot! { match () { Dereff @ x => () } }"
---
fn main() {
    match () {
        Dereff @ x => {}
    }
}
